# c2_search_mcp

./: .gitignore  LICENSE  README.md  README_zh.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  task.md
.cursor/rules/: document.mdc  general.mdc  git.mdc  project.mdc  python.mdc
.github/workflows/: ci.yml
src/: __init__.py  config.py  main.py
src/modules/adapters/: cve_search_adapter.py
src/modules/formatters/: cve_search_formatter.py
src/modules/logging/: __init__.py  log_store.py  logger.py
src/modules/query_processor/: __init__.py  processor.py  validator.py
src/modules/result_aggregator/: __init__.py  aggregator.py  cve_search_formatter.py  response_formatter.py
src/modules/services/: cve_search_service.py
src/modules/threat_intel/: __init__.py  abuseipdb.py  api_provider.py  base_api.py  hybrid_analysis.py  ipinfo.py  shodan.py  threatbook.py  threatfox.py  urlscan.py  virustotal.py
src/modules/tools/: mcp_cve_search.py
tests/: test.py  test_query_processor.py
threat_intel_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
